its added 4 features

--- a/MainPage.xaml
+++ b/MainPage.xaml
@@ -1,43 +1,69 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+             xmlns:local="clr-namespace:CetTodoApp"
              x:Class="CetTodoApp.MainPage">
 
-   <VerticalStackLayout Padding="20" Margin="20">
-       
-       <Border Margin="20" >
-           <VerticalStackLayout Margin="10" Padding="10">
-               <Entry x:Name="Title" Placeholder="Enter a todo Item" />
-               <HorizontalStackLayout Padding="20" Margin="10">
-                    <Label Text="Due Date :" VerticalOptions="Center"></Label>
-                    <DatePicker x:Name="DueDate" VerticalOptions="Center" ></DatePicker>
-               </HorizontalStackLayout>
-               <Button x:Name="AddButton" Text="Save" Clicked="AddButton_OnClicked"></Button>
-               
-               
-           </VerticalStackLayout>
-       </Border>
-       <ListView x:Name="TasksListView" ItemSelected="TasksListView_OnItemSelected">
-           <ListView.ItemTemplate>
-               <DataTemplate>
-                   <ViewCell>
-                       <StackLayout Orientation="Horizontal">
-                           <Label Text="{Binding Title}"   
-                                  VerticalOptions="Center"  
-                                  /> 
-                           
-                           <Label 
-                               Text="{Binding DueDate, StringFormat=' (Due: {0:dd/MM})'}"
-                               VerticalOptions="Center"/>
-                           <CheckBox VerticalOptions="Center" IsChecked="{Binding IsComplete}" IsEnabled="False" ></CheckBox>
-                         
-                       </StackLayout>
-                       </ViewCell>
-                   </DataTemplate>
-               </ListView.ItemTemplate>
-           </ListView>
-       
-       
-   </VerticalStackLayout>
+    <ContentPage.Resources>
+        <ResourceDictionary>
+            <Style x:Key="TodoItemLabelStyle" TargetType="Label">
+                <Setter Property="TextDecorations" Value="None" />
+                <Style.Triggers>
+                    <DataTrigger TargetType="Label"
+                                 Binding="{Binding IsComplete}"
+                                 Value="True">
+                        <Setter Property="TextDecorations" Value="Strikethrough" />
+                    </DataTrigger>
+                </Style.Triggers>
+            </Style>
 
+            <local:TodoItemToColorConverter x:Key="TodoItemToColorConverter" />
+        </ResourceDictionary>
+    </ContentPage.Resources>
+    
+    <Grid Padding="20" Margin="20"
+          RowDefinitions="Auto,*">
+        
+        <Border Margin="20"
+                Grid.Row="0">
+            <VerticalStackLayout Margin="10" Padding="10">
+                <Entry x:Name="Title" Placeholder="Enter a to do Item" />
+                <HorizontalStackLayout Padding="20" Margin="10">
+                    <Label Text="Due Date :" VerticalOptions="Center" />
+                    <DatePicker x:Name="DueDate" VerticalOptions="Center" />
+                </HorizontalStackLayout>
+                <Button x:Name="AddButton" Text="Save" Clicked="AddButton_OnClicked" />
+            </VerticalStackLayout>
+        </Border>
+        
+        <ListView x:Name="TasksListView"
+                  Grid.Row="1"
+                  VerticalOptions="FillAndExpand"
+                  ItemSelected="TasksListView_OnItemSelected">
+            <ListView.ItemTemplate>
+                <DataTemplate>
+                    <ViewCell>
+                        <StackLayout Orientation="Horizontal">
+
+                            <CheckBox VerticalOptions="Center"
+                                      IsChecked="{Binding IsComplete}"
+                                      IsEnabled="False" />
+
+                            <Label Text="{Binding Title}"
+                                   VerticalOptions="Center"
+                                   Style="{StaticResource TodoItemLabelStyle}"
+                                   TextColor="{Binding ., Converter={StaticResource TodoItemToColorConverter}}" />
+
+                            <Label Text="{Binding DueDate, StringFormat=' (Due: {0:dd/MM})'}"
+                                   VerticalOptions="Center"
+                                   Style="{StaticResource TodoItemLabelStyle}"
+                                   TextColor="{Binding ., Converter={StaticResource TodoItemToColorConverter}}" />
+
+                        </StackLayout>
+                    </ViewCell>
+                </DataTemplate>
+            </ListView.ItemTemplate>
+        </ListView>
+
+    </Grid>
 </ContentPage>
